2007-08-11  Inge Wallin  <inge@lysator.liu.se>

	d-pointerify MarbleAboutDialog (also Krazy issue 8).
	* src/lib/MarbleAboutDialog.h (MarbleAboutDialog): Introduce d-pointer
	* src/lib/MarbleAboutDialog.cpp (MarbleAboutDialogPrivate): new class
		(MarbleAboutDialog):use d-pointer where appropriate
	
2007-08-11  Andrew Manson   <g.real.ate@gmail.com>

    Altered the updateGps() function in MarbleWidget so that it now
    only updates the region where the the gps marker was and 
    currenly is
    * src/lib/MarbleWidget.cpp : updateGps() now uses regions

    Added a new class that represents a GpsTracking Object. It is 
    designed to remove the need for the Gps Layer to know abount gpsd
    or any other methods of getting current location.
    * src/lib/gps/GpsTracking.{ h, cpp } : new class

    Removed anyting that GpsTracking now covers from GpsLayer
    * src/lib/gps/GpsLayer.{h, cpp} : removed tracking code

    Made convince method distance() static in AbstractLayer
    * src/lib/AbstractLayer/AbstractLayer.h : static methods

2007-08-11  Inge Wallin  <inge@lysator.liu.se>

	Rename class KAtlasAboutDialog into MarbleAboutDialog and change
	file names into MarbleAboutDialog.*
	* src/lib/MarbleAboutDialog.cpp: renamed from katlasaboutdialog.cpp
	* src/lib/MarbleAboutDialog.h: renamed from katlasaboutdialog.h
	* src/lib/MarbleAboutDialog.ui: renamed from katlasaboutdialog.ui
	* src/lib/MarbleWidgetPopupMenu.cpp (slotAboutDialog): Use new name
	* src/lib/CMakeLists.txt: Name changes as above.
	
	Remove warnings
	src/lib/MarbleWidget.cpp (paint): mark unused with Q_UNUSED()
	src/lib/global.h (Projection): Disable Mercator
	src/lib/texcolorizer.cpp (rectangularColorizer): comment out unused var

	Make the code clearer by naming things better.
	* src/lib/placemarkpainter.{h,cpp} (testXBug): Renamed from testbug().
	(m_useXWorkaround): renamed from m_useworkaround
	
	Fix Krazy issue 13: proper include directives.