@@ -17,21 +17,14 @@ INCLUDE_DIRECTORIES(
 INCLUDE(${QT_USE_FILE})
 
 set(marblenavigator_SRCS
-           MarbleNavigator.cpp
            MarbleNavigatorPlugin.cpp
 )
 MESSAGE( STATUS ${marblenavigator_SRCS} )
 
 set(marblenavigator_HDRS
-           MarbleNavigator.h
            MarbleNavigatorPlugin.h
 )
 MESSAGE( STATUS ${marblenavigator_HDRS} )
-
-set(marblenavigator_UI
-           MarbleNavigator.ui
-)
-MESSAGE( STATUS ${marblenavigator_UI} )
 
 qt4_add_resources(marblenavigator_SRCS ../../marble.qrc)
 
@@ -46,7 +39,6 @@ if(WIN32)
 endif(WIN32)
 
 if (QTONLY)
-  qt4_wrap_ui(marblenavigator_SRCS ${marblenavigator_UI})
   qt4_automoc(${marblenavigator_SRCS})
   add_library(MarbleNavigatorPlugin SHARED ${marblenavigator_SRCS})
   target_link_libraries (MarbleNavigatorPlugin ${QT_QTCORE_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTSVG_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTMAIN_LIBRARY})
@@ -54,7 +46,6 @@ if (QTONLY)
   install(TARGETS MarbleNavigatorPlugin DESTINATION ${QT_PLUGINS_DIR}/designer)
 else (QTONLY)
   INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} )
-  kde4_add_ui_files(marblenavigator_SRCS ${marblenavigator_UI})
   kde4_add_library(MarbleNavigatorPlugin SHARED ${marblenavigator_SRCS})
   target_link_libraries (MarbleNavigatorPlugin ${QT_QTCORE_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTSVG_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${KDE4_KDECORE_LIBRARY} ${KDE4_KDEUI_LIBRARY} ${KDE4_KIO_LIBRARY} ${QT_QTMAIN_LIBRARY})
   install(TARGETS MarbleNavigatorPlugin DESTINATION ${PLUGIN_INSTALL_DIR}/plugins/designer)
